--- a/frequencia/templates/frequencia/base.html
+++ b/frequencia/templates/frequencia/base.html
@@ -35,7 +35,7 @@
   </div>
 </nav>
 	
-	<div class="content container">
+	<div class="content container fixed-bottom" >
             <div class="row">
                 <div class="col-md-8">
                     {% block content %}
