--- a/frequencia/templates/frequencia/frequencia.html
+++ b/frequencia/templates/frequencia/frequencia.html
@@ -1,12 +1,11 @@
 {% extends 'frequencia/base.html'%}
 
-{% load crispy_forms_tags %}
 
 {% block content%}
 
 	<form method="POST">
         {% csrf_token %}
-	        <p>{{ form|crispy }}</p>
+	        <p>{{ form}}</p>
         <button type="submit" class="save btn btn-default">Salvar</button>
     </form>
 
