--- a/notas/templates/notas/notas.html
+++ b/notas/templates/notas/notas.html
@@ -1,5 +1,4 @@
 {% extends 'frequencia/base.html'%}
-{% load crispy_forms_tags %}
 
 {% block content%}
   <div class="container-fluid">
@@ -9,7 +8,7 @@
     <div class="well">Materia: <b>{{ materia.nome }}</b></div>
 </div>
 
-        {{ form|crispy }}
+        {{ form }}
         
         <button type="submit" class="btn btn-primary">Salvar</button>
     </form>
